# web-to-markdown-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: publish.yml
docs/: security.md
scripts/: smoke_fetch.py  wtm-egress-check.sh
src/playwright_markdown_mcp/: __init__.py  server.py
src/web_to_markdown_mcp/: __init__.py  _ssrf.py  serve_http.py  server.py
tests/: test_fast_path.py  test_fetch_tool.py  test_polling.py  test_ssrf.py
